;(rule
; (targets xhr.html)  ; to give a purpose to the rule, not elegant
; (deps   index.html) ; the real target to be copied
; (action (copy %{deps} %{targets})))

(executable (name xhr)
 (libraries js_of_ocaml)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modes js))

(rule
 (targets standalone.html)
 (deps standalone_gen.sh xhr.bc.js)
 (action (run sh standalone_gen.sh)))
